# pi-sidecar

./: .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tox.toml  tsconfig.json
docs/: configuration-reference.html  configuration-reference.md  configuring-providers.html  configuring-providers.md  configuring-tools.html  configuring-tools.md  configuring-watchdog.html  configuring-watchdog.md  discovering-models.html  discovering-models.md  embedding-in-node.html  embedding-in-node.md  environment-variables.html  environment-variables.md  extending-with-tools.html  extending-with-tools.md  http-tool-executor-reference.html  http-tool-executor-reference.md  index.html  llms-full.txt  llms.txt  managing-conversations.html  managing-conversations.md  managing-sessions.html  managing-sessions.md  orchestrating-subagents.html  orchestrating-subagents.md  python-client-reference.html  python-client-reference.md  python-client.html  python-client.md  python-integration-patterns.html  python-integration-patterns.md  quickstart.html  quickstart.md  recipes-python-client.html  recipes-python-client.md  recipes-rest-api.html  recipes-rest-api.md  rest-api-reference.html  (+14 more)
examples/: basic_prompt.py  health_check.py  list_models.py  multi_turn.py  parallel_tasks.py  provider_status.py  start-sidecar.ts  usage_tracking.py
pi_sidecar_client/: __init__.py
scripts/: enforce-protobufjs-floor.mjs  start-sidecar.sh
src/: http-tool-executor.ts  index.ts  logger.ts  pi-version.ts  resolve-extension-path.ts  server.ts  sessions.ts  watchdog.ts
tests/e2e/: README.md  conftest.py  helpers.py  test_live_battery.py
tests/test_python/: conftest.py  test_sidecar_client.py
tests/test_ts/: acpx-provider-integration.test.ts  agent-dir-integration.test.ts  cli-provider-integration.test.ts  dependency-overrides.test.ts  http-tool-executor.test.ts  message-boundary.test.ts  parse-body.test.ts  pi-version.test.ts  provider-status-redact.test.ts  route-match.test.ts  session-store-integration.test.ts  session-store.test.ts  snapshot-agent-source.test.ts  subagent-integration.test.ts  tools-config.test.ts  watchdog.test.ts
