[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-sidecar-client"
version = "0.1.0.dev4"
description = "Python client for the Pi SDK sidecar service"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "python-simple-logger"]

[project.urls]
Repository = "https://github.com/myk-org/pi-sidecar"

[tool.setuptools.packages.find]
include = ["pi_sidecar_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/test_python"]

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PLC0415", "ARG", "RUF059"]

[tool.ruff.lint.per-file-ignores]
"*" = ["E501"]
"/*tests/*" = ["ARG"]

[tool.mypy]
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "simple_logger.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
